Fix search broken on switcher type and also style x

--- a/app/assets/stylesheets/application/components/search.scss
+++ b/app/assets/stylesheets/application/components/search.scss
@@ -24,7 +24,7 @@
   &__results {
     display: flex;
     flex-direction: column;
-    gap: var(--spacing-xxs);
+    gap: var(--spacing-md);
     overflow-y: auto;
     padding: 0 var(--spacing-md) var(--spacing-xxxl) var(--spacing-md);
   }
