--- a/app/assets/stylesheets/application/modals/modal.scss
+++ b/app/assets/stylesheets/application/modals/modal.scss
@@ -52,6 +52,7 @@
     z-index: var(--z-modal-close);
     background-color: var(--color-neutral-200);
     border-radius: 50%;
+    z-index: var(--z-modal-close);
 
     &::before {
       content: '';
